--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_blue: ^0.7.2
 
 
   # The following adds the Cupertino Icons font to your application.
